crates/simplexpr/src/snapshots/simplexpr__dynval__test__parse_duration-2.snap
---
source: crates/simplexpr/src/dynval.rs
expression: "DynVal::from(\"1s\").as_duration()"

---
Ok(
    1s,
)
