crates/simplexpr/src/snapshots/simplexpr__dynval__test__parse_duration-3.snap
---
source: crates/simplexpr/src/dynval.rs
expression: "DynVal::from(\"0.1s\").as_duration()"

---
Ok(
    100ms,
)
