crates/simplexpr/src/snapshots/simplexpr__dynval__test__parse_duration-4.snap
---
source: crates/simplexpr/src/dynval.rs
expression: "DynVal::from(\"5m\").as_duration()"

---
Ok(
    300s,
)
