crates/simplexpr/src/snapshots/simplexpr__dynval__test__parse_duration-5.snap
---
source: crates/simplexpr/src/dynval.rs
expression: "DynVal::from(\"5min\").as_duration()"

---
Ok(
    300s,
)
