crates/simplexpr/src/snapshots/simplexpr__dynval__test__parse_duration-6.snap
---
source: crates/simplexpr/src/dynval.rs
expression: "DynVal::from(\"0.5m\").as_duration()"

---
Ok(
    30s,
)
