crates/simplexpr/src/snapshots/simplexpr__dynval__test__parse_duration-7.snap
---
source: crates/simplexpr/src/dynval.rs
expression: "DynVal::from(\"1h\").as_duration()"

---
Ok(
    3600s,
)
