crates/simplexpr/src/snapshots/simplexpr__dynval__test__parse_duration-8.snap
---
source: crates/simplexpr/src/dynval.rs
expression: "DynVal::from(\"0.5h\").as_duration()"

---
Ok(
    1800s,
)
