crates/simplexpr/src/snapshots/simplexpr__dynval__test__parse_duration.snap
---
source: crates/simplexpr/src/dynval.rs
expression: "DynVal::from(\"100ms\").as_duration()"

---
Ok(
    100ms,
)
