crates/simplexpr/src/snapshots/simplexpr__dynval__test__parse_range-2.snap
---
source: crates/simplexpr/src/dynval.rs
expression: "DynVal::from(\"..=\").as_range()"
---
Err(
    ConversionError {
        value: "",
        target_type: "f64",
        source: Some(
            ParseFloatError {
                kind: Empty,
            },
        ),
    },
)
