crates/simplexpr/src/snapshots/simplexpr__dynval__test__parse_range-3.snap
---
source: crates/simplexpr/src/dynval.rs
expression: "DynVal::from(\"1..\").as_range()"
---
Ok(
    (
        Included(
            1.0,
        ),
        Unbounded,
    ),
)
