crates/simplexpr/src/snapshots/simplexpr__dynval__test__parse_range-4.snap
---
source: crates/simplexpr/src/dynval.rs
expression: "DynVal::from(\"..-1\").as_range()"
---
Ok(
    (
        Unbounded,
        Excluded(
            -1.0,
        ),
    ),
)
